Updates for testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(Framework VERSION 0.0.0 LANGUAGES C CXX)
 find_package(ROOT 6.12.0 COMPONENTS Rint Thread Cling Core MathCore MathMore Matrix Minuit Minuit2 Physics MLP Foam Hist Spectrum Tree TreePlayer RIO XMLIO Net Gpad Graf Postscript Graf3d Eve RGL Gui GuiHtml Html EG Geom GeomBuilder PyROOT TMVA)
 include(GNUInstallDirs)
 include(${ROOT_USE_FILE})
+include(GoogleTest)
 set(Boost_NO_BOOST_CMAKE ON)
 set(Boost_NO_SYSTEM_PATHS ON)
 find_package(Boost 1.67.0 COMPONENTS filesystem thread iostreams python27 regex serialization system program_options )
@@ -33,8 +34,9 @@ add_subdirectory(SimDataFormats)
 install(DIRECTORY SimDataFormats DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
 add_subdirectory(Utilities)
 install(DIRECTORY Utilities DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
+add_subdirectory(cmaketools)
+install(DIRECTORY cmaketools DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
 install(FILES CMakeLists.txt DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
-set(BUILD_TESTING ON)
+set(BUILDTEST True)
 include(CTest)
 enable_testing()
-
