--- a/FWCore/FWLite/bin/CMakeLists.txt
+++ b/FWCore/FWLite/bin/CMakeLists.txt
@@ -22,15 +22,15 @@ Boost::regex
 Boost::serialization
 Boost::system
 Boost::thread
-Core
 FWCoreFWLite
-MathCore
-Net
-Python::python
-RIO
-Thread
+Python2::Python
+ROOT::Core
+ROOT::MathCore
+ROOT::Net
+ROOT::RIO
+ROOT::Thread
+ROOT::Tree
 Threads::Threads
-Tree
 )
 
 
@@ -60,15 +60,15 @@ Boost::regex
 Boost::serialization
 Boost::system
 Boost::thread
-Core
 FWCoreFWLite
-MathCore
-Net
-Python::python
-RIO
-Thread
+Python2::Python
+ROOT::Core
+ROOT::MathCore
+ROOT::Net
+ROOT::RIO
+ROOT::Thread
+ROOT::Tree
 Threads::Threads
-Tree
 )
 
 
