--- a/FWCore/Framework/test/CMakeLists.txt
+++ b/FWCore/Framework/test/CMakeLists.txt
@@ -30,7 +30,7 @@ Boost::serialization
 Boost::system
 Boost::thread
 FWCoreFramework
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -64,7 +64,7 @@ Boost::serialization
 Boost::system
 Boost::thread
 FWCoreFramework
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -101,7 +101,7 @@ DataFormatsProvenance
 FWCoreFramework
 FWCoreParameterSet
 FWCoreServiceRegistry
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -136,7 +136,7 @@ Boost::thread
 DataFormatsCommon
 FWCoreFramework
 FWCoreParameterSet
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -173,7 +173,7 @@ Boost::thread
 DataFormatsCommon
 FWCoreFramework
 FWCoreParameterSet
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -207,7 +207,7 @@ Boost::system
 Boost::thread
 FWCoreFramework
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -247,7 +247,7 @@ FWCoreFramework
 FWCoreParameterSet
 FWCoreServiceRegistry
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -287,7 +287,7 @@ FWCoreMessageLogger
 FWCoreParameterSet
 FWCoreServiceRegistry
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -321,7 +321,7 @@ Boost::system
 Boost::thread
 FWCoreFramework
 FWCoreParameterSet
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -355,7 +355,7 @@ Boost::system
 Boost::thread
 FWCoreFramework
 FWCoreParameterSet
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -397,7 +397,7 @@ DataFormatsCommon
 DataFormatsTestObjects
 FWCoreFramework
 FWCoreParameterSet
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -434,7 +434,7 @@ Boost::system
 Boost::thread
 FWCoreFramework
 FWCoreParameterSet
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -470,7 +470,7 @@ Boost::system
 Boost::thread
 FWCoreFramework
 FWCoreParameterSet
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -506,7 +506,7 @@ Boost::system
 Boost::thread
 FWCoreFramework
 FWCoreParameterSet
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -542,7 +542,7 @@ Boost::system
 Boost::thread
 FWCoreFramework
 FWCoreParameterSet
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -576,7 +576,7 @@ Boost::system
 Boost::thread
 FWCoreFramework
 FWCoreParameterSet
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -611,7 +611,7 @@ Boost::thread
 DataFormatsProvenance
 FWCoreFramework
 FWCoreParameterSet
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -645,7 +645,7 @@ Boost::system
 Boost::thread
 FWCoreFramework
 FWCoreFrameworkTestDummyForEventSetup
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -679,7 +679,7 @@ Boost::system
 Boost::thread
 FWCoreFramework
 FWCoreFrameworkTestDummyForEventSetup
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -712,7 +712,7 @@ Boost::serialization
 Boost::system
 Boost::thread
 FWCoreFramework
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -746,7 +746,7 @@ Boost::system
 Boost::thread
 FWCoreFramework
 FWCoreFrameworkTestDummyForEventSetup
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -782,7 +782,7 @@ Boost::thread
 DataFormatsTestObjects
 FWCoreFramework
 FWCoreFrameworkTestDummyForEventSetup
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -818,7 +818,7 @@ FWCoreFramework
 FWCoreFrameworkTestDummyForEventSetup
 FWCoreParameterSet
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -856,7 +856,7 @@ Boost::system
 Boost::thread
 DataFormatsCommon
 FWCoreFramework
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -890,7 +890,7 @@ Boost::system
 Boost::thread
 FWCoreFramework
 FWCoreFrameworkTest
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -925,7 +925,7 @@ Boost::thread
 FWCoreFramework
 FWCoreParameterSet
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -960,7 +960,7 @@ Boost::thread
 DataFormatsProvenance
 FWCoreFramework
 FWCoreParameterSet
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -1017,7 +1017,7 @@ FWCoreParameterSet
 FWCoreParameterSetReader
 FWCoreUtilities
 FWCoreVersion
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -1072,7 +1072,7 @@ FWCoreFrameworkTestDummyForEventSetup
 FWCoreParameterSet
 FWCoreUtilities
 FWCoreVersion
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -1118,7 +1118,7 @@ FWCoreFrameworkTest
 FWCoreParameterSetReader
 FWCoreServiceRegistry
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -1163,7 +1163,7 @@ FWCoreFramework
 FWCoreParameterSet
 FWCoreUtilities
 FWCoreVersion
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -1207,7 +1207,7 @@ FWCoreFramework
 FWCoreParameterSet
 FWCoreUtilities
 FWCoreVersion
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -1245,7 +1245,7 @@ Boost::system
 Boost::thread
 DataFormatsCommon
 FWCoreFramework
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -1281,7 +1281,7 @@ Boost::system
 Boost::thread
 FWCoreFramework
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -1317,7 +1317,7 @@ Boost::system
 Boost::thread
 FWCoreFramework
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -1353,7 +1353,7 @@ Boost::system
 Boost::thread
 FWCoreFramework
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -1391,7 +1391,7 @@ DataFormatsCommon
 DataFormatsWrappedStdDictionaries
 FWCoreFramework
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -1429,7 +1429,7 @@ DataFormatsCommon
 DataFormatsWrappedStdDictionaries
 FWCoreFramework
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -1465,7 +1465,7 @@ Boost::system
 Boost::thread
 FWCoreFramework
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -1501,7 +1501,7 @@ Boost::system
 Boost::thread
 FWCoreFramework
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -1537,7 +1537,7 @@ Boost::system
 Boost::thread
 FWCoreFramework
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -1573,7 +1573,7 @@ Boost::system
 Boost::thread
 FWCoreFramework
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -1609,7 +1609,7 @@ Boost::system
 Boost::thread
 FWCoreFramework
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -1647,7 +1647,7 @@ DataFormatsProvenance
 FWCoreFramework
 FWCoreParameterSet
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -1686,7 +1686,7 @@ FWCoreFramework
 FWCoreParameterSet
 FWCoreServiceRegistry
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -1725,7 +1725,7 @@ FWCoreFramework
 FWCoreParameterSet
 FWCoreServiceRegistry
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -1764,7 +1764,7 @@ FWCoreFramework
 FWCoreParameterSet
 FWCoreServiceRegistry
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -1803,7 +1803,7 @@ FWCoreFramework
 FWCoreParameterSet
 FWCoreServiceRegistry
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -1841,7 +1841,7 @@ DataFormatsProvenance
 FWCoreFramework
 FWCoreParameterSet
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -1876,7 +1876,7 @@ Boost::serialization
 Boost::system
 Boost::thread
 FWCoreFramework
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -1912,7 +1912,7 @@ Boost::system
 Boost::thread
 FWCoreFramework
 FWCoreFrameworkTest
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -1948,7 +1948,7 @@ Boost::system
 Boost::thread
 FWCoreFramework
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -1984,7 +1984,7 @@ Boost::system
 Boost::thread
 FWCoreFramework
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -2020,7 +2020,7 @@ Boost::system
 Boost::thread
 FWCoreFramework
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -2056,7 +2056,7 @@ Boost::system
 Boost::thread
 FWCoreFramework
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -2092,7 +2092,7 @@ Boost::system
 Boost::thread
 FWCoreFramework
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -2128,7 +2128,7 @@ Boost::system
 Boost::thread
 FWCoreFramework
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -2165,7 +2165,7 @@ Boost::serialization
 Boost::system
 Boost::thread
 FWCoreFramework
-Python::python
+Python2::Python
 Threads::Threads
 )
 
