--- a/FWCore/PluginManager/bin/CMakeLists.txt
+++ b/FWCore/PluginManager/bin/CMakeLists.txt
@@ -22,7 +22,7 @@ Boost::serialization
 Boost::system
 Boost::thread
 FWCorePluginManager
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -53,7 +53,7 @@ Boost::serialization
 Boost::system
 Boost::thread
 FWCorePluginManager
-Python::python
+Python2::Python
 Threads::Threads
 )
 
