--- a/FWCore/PluginManager/test/CMakeLists.txt
+++ b/FWCore/PluginManager/test/CMakeLists.txt
@@ -24,7 +24,7 @@ Boost::serialization
 Boost::system
 Boost::thread
 FWCorePluginManager
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -57,7 +57,7 @@ Boost::serialization
 Boost::system
 Boost::thread
 FWCorePluginManager
-Python::python
+Python2::Python
 TestFWCorePluginManagerDummyFactory
 Threads::Threads
 )
@@ -91,7 +91,7 @@ Boost::serialization
 Boost::system
 Boost::thread
 FWCorePluginManager
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -124,7 +124,7 @@ Boost::serialization
 Boost::system
 Boost::thread
 FWCorePluginManager
-Python::python
+Python2::Python
 Threads::Threads
 )
 
