--- a/FWCore/PythonParameterSet/test/CMakeLists.txt
+++ b/FWCore/PythonParameterSet/test/CMakeLists.txt
@@ -32,7 +32,7 @@ Boost::thread
 FWCoreParameterSet
 FWCorePythonParameterSet
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
