--- a/FWCore/Services/plugins/CMakeLists.txt
+++ b/FWCore/Services/plugins/CMakeLists.txt
@@ -47,7 +47,7 @@ Boost::serialization
 Boost::system
 Boost::thread
 FWCoreServices
-Python::python
+Python2::Python
 Threads::Threads
 UtilitiesStorageFactory
 UtilitiesXrdAdaptor
