--- a/FWCore/TestProcessor/test/CMakeLists.txt
+++ b/FWCore/TestProcessor/test/CMakeLists.txt
@@ -32,7 +32,7 @@ FWCoreParameterSet
 FWCorePythonParameterSet
 FWCoreTestProcessor
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
