--- a/FWCore/Utilities/test/CMakeLists.txt
+++ b/FWCore/Utilities/test/CMakeLists.txt
@@ -22,7 +22,7 @@ Boost::serialization
 Boost::system
 Boost::thread
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -53,7 +53,7 @@ Boost::serialization
 Boost::system
 Boost::thread
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -84,7 +84,7 @@ Boost::serialization
 Boost::system
 Boost::thread
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -115,7 +115,7 @@ Boost::serialization
 Boost::system
 Boost::thread
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -146,7 +146,7 @@ Boost::serialization
 Boost::system
 Boost::thread
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -177,7 +177,7 @@ Boost::serialization
 Boost::system
 Boost::thread
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -208,7 +208,7 @@ Boost::serialization
 Boost::system
 Boost::thread
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -239,7 +239,7 @@ Boost::serialization
 Boost::system
 Boost::thread
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -270,7 +270,7 @@ Boost::serialization
 Boost::system
 Boost::thread
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -303,7 +303,7 @@ Boost::serialization
 Boost::system
 Boost::thread
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -334,7 +334,7 @@ Boost::serialization
 Boost::system
 Boost::thread
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -365,7 +365,7 @@ Boost::serialization
 Boost::system
 Boost::thread
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -398,7 +398,7 @@ Boost::serialization
 Boost::system
 Boost::thread
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -444,7 +444,7 @@ Boost::serialization
 Boost::system
 Boost::thread
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -476,7 +476,7 @@ Boost::serialization
 Boost::system
 Boost::thread
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -507,7 +507,7 @@ Boost::serialization
 Boost::system
 Boost::thread
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
@@ -539,7 +539,7 @@ Boost::serialization
 Boost::system
 Boost::thread
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
