--- a/Utilities/StorageFactory/CMakeLists.txt
+++ b/Utilities/StorageFactory/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_subdirectory(bin)
-if(BUILDTEST)
+if(${BUILDTEST})
 add_subdirectory(test)
 endif()
 add_subdirectory(plugins)
@@ -55,7 +55,7 @@ FWCoreMessageLogger
 FWCorePluginManager
 FWCoreServiceRegistry
 FWCoreUtilities
-Python::python
+Python2::Python
 Threads::Threads
 )
 
